--- a/react-ref/src/pages/_HOME/HomePage.css
+++ b/react-ref/src/pages/_HOME/HomePage.css
@@ -1,15 +1,68 @@
 #root {
 	max-width: 1280px;
-	margin: 0 auto;
-	padding: 2rem;
+	margin: 0;
+	padding: 0;
 	text-align: center;
 }
 
-.headerWrapper {
-	height: "100%";
-	width: "100%";
+.App {
+	display: flex;
+	flex-direction: column;
+
+	position: relative;
+	min-height: 100vh;
 }
 
+.headerWrapper {
+	z-index: 50;
+	position: sticky;
+	top: 0px;
+
+	/* display: grid;
+	grid-template-columns: repeat(3, 1fr); */
+	display: flex;
+	justify-content: space-between;
+
+	transition-duration: 0.3s;
+	padding: 0.5em 1em;
+	max-width: 100vw;
+	height: 100%;
+	width: 100%;
+}
+
+.logoAndHamWrapper {
+	display: grid;
+	grid-template-columns: 40px 1fr;
+	gap: var(--flex-gap);
+}
+
+.navWrapper {
+	/* display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(40px, 1fr)); */
+	display: flex;
+	justify-content: space-between;
+	gap: var(--flex-gap);
+}
+
+.logoSearchWrapper,
+.navWrapper > * {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: auto auto;
+}
+.nav {
+	display: none;
+}
+
+.footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 2.5rem; /* Footer height */
+}
+
+/*  DEFAULT */
 .logo {
 	height: 6em;
 	padding: 1.5em;
