add nominal styling for theme change

--- a/react-ref/src/pages/_HOME/HomePage.css
+++ b/react-ref/src/pages/_HOME/HomePage.css
@@ -55,6 +55,12 @@
 	display: none;
 }
 
+.lightToggle,
+.darkToggle,
+.githubLink {
+	cursor: pointer;
+}
+
 .footer {
 	position: absolute;
 	bottom: 0;
