--- a/react-ref/src/index.css
+++ b/react-ref/src/index.css
@@ -20,6 +20,7 @@
 	--dark-bg-secondary-color: #363a47;
 
 	--highlight-primary-color: #149eca;
+	--highlight-secondary-color: #0484af;
 
 	--flex-gap: 12px;
 }
