--- a/react-ref/src/index.css
+++ b/react-ref/src/index.css
@@ -25,8 +25,18 @@
 	--highlight-bg-color: #2a3743;
 
 	--flex-gap: 12px;
+
+	--hamburger-bar-width: 22px;
+	--hamburger-bar-height: 2px;
+	--hamburger-gap: 5px;
+	--hamburger-menu-height: calc(
+		var(--hamburger-bar-height) * 3 + var(--hamburger-gap) * 2
+	);
+	--ham-x-width: calc(var(--hamburger-menu-height) * 1.41421356237);
 }
-* {
+*,
+*::after,
+*::before {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
@@ -67,7 +77,7 @@ button:hover {
 }
 button:focus,
 button:focus-visible {
-	outline: 4px auto -webkit-focus-ring-color;
+	outline: 2px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
