add search icon to mobile nav - replacing old input

--- a/react-ref/src/pages/_HOME/HomePage.css
+++ b/react-ref/src/pages/_HOME/HomePage.css
@@ -45,6 +45,10 @@
 	gap: var(--flex-gap);
 }
 
+.searchWrapper button {
+	background: transparent;
+}
+
 .logoSearchWrapper,
 .navWrapper > * {
 	display: flex;
