--- a/react-ref/src/index.css
+++ b/react-ref/src/index.css
@@ -24,7 +24,7 @@
 	--highlight-secondary-color: #0484af;
 	--highlight-bg-color: #2a3743;
 
-	--flex-gap: 12px;
+	--flex-gap: 18px;
 
 	--hamburger-bar-width: 22px;
 	--hamburger-bar-height: 2px;
@@ -75,10 +75,10 @@ button {
 button:hover {
 	border-color: #646cff;
 }
-button:focus,
+/* button:focus,
 button:focus-visible {
 	outline: 2px auto -webkit-focus-ring-color;
-}
+} */
 
 @media (prefers-color-scheme: light) {
 	:root {
