--- a/react-ref/src/pages/_HOME/HomePage.css
+++ b/react-ref/src/pages/_HOME/HomePage.css
@@ -25,7 +25,7 @@
 	justify-content: space-between;
 
 	transition-duration: 0.3s;
-	padding: 0.5em 1em;
+	padding: 0.8em 1em;
 	max-width: 100vw;
 	height: 100%;
 	width: 100%;
@@ -42,11 +42,13 @@
 	grid-template-columns: repeat(auto-fit, minmax(40px, 1fr)); */
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	gap: var(--flex-gap);
 }
 
 .searchWrapper button {
 	background: transparent;
+	padding-top: 5px;
 }
 
 .logoSearchWrapper,
@@ -54,7 +56,6 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin: auto auto;
 }
 .nav {
 	display: none;
