remove unused global styles

--- a/react-ref/src/index.css
+++ b/react-ref/src/index.css
@@ -34,6 +34,7 @@
 	);
 	--ham-x-width: calc(var(--hamburger-menu-height) * 1.41421356237);
 }
+
 *,
 *::after,
 *::before {
@@ -72,9 +73,9 @@ button {
 	border: none;
 	transition: border-color 0.25s;
 }
-button:hover {
+/* button:hover {
 	border-color: #646cff;
-}
+} */
 /* button:focus,
 button:focus-visible {
 	outline: 2px auto -webkit-focus-ring-color;
@@ -85,10 +86,10 @@ button:focus-visible {
 		color: #213547;
 		background-color: #ffffff;
 	}
-	a:hover {
+	/* a:hover {
 		color: #747bff;
 	}
 	button {
 		background-color: #f9f9f9;
-	}
+	} */
 }
